Add and link stylesheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>FCC Local Weather App</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 <h1>Your Local Weather</h1>
