Fix Jquery connection

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>FCC Local Weather App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 <h1>Your Local Weather</h1>
